--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Simple React App</title>
+    <title>airbnb-prime</title>
     <script src="https://kit.fontawesome.com/bfbf8aaf62.js" crossorigin="anonymous"></script>
+    <link rel = "icon" href ="./smaller-logo.png" type = "image/x-icon">
   </head>
   <body>
     <div id="root"></div>
