--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>airbnb-prime</title>
     <script src="https://kit.fontawesome.com/bfbf8aaf62.js" crossorigin="anonymous"></script>
-    <link rel = "icon" href ="./smaller-logo.png" type = "image/x-icon">
+    <link rel = "icon" href ="./pink-smaller.jpg" type = "image/x-icon">
   </head>
   <body>
     <div id="root"></div>
