--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>airbnb-prime</title>
+    <title>Vacation Homes & Condo Rentals - Airbnb-Prime</title>
     <script src="https://kit.fontawesome.com/bfbf8aaf62.js" crossorigin="anonymous"></script>
-    <link rel = "icon" href ="./pink-smaller.jpg" type = "image/x-icon">
+    <!-- <link rel = "icon" href ="./pink-smaller.jpg" type = "image/x-icon"> -->
+    <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
+    <link rel="manifest" href="./site.webmanifest">
   </head>
   <body>
     <div id="root"></div>
